# esp-devkit

./: .gitignore  README.md  devkit.cmake  flake.nix
bsp/: CMakeLists.txt  Kconfig
bsp/boards/airq/: airq.c  airq_sim.c  board.cmake
bsp/boards/atom_lite/: atom_lite.c  atom_lite_sim.c  board.cmake
bsp/boards/atom_s3_lite/: atom_s3_lite.c  atom_s3_lite_sim.c  board.cmake
bsp/boards/core/: board.cmake  core.c  core_audio.c  core_audio.h  core_panel.c  core_panel.h  core_sim.c
bsp/boards/core_s3/: board.cmake  core_s3.c  core_s3_audio.c  core_s3_audio.h  core_s3_panel.c  core_s3_panel.h  core_s3_sim.c
bsp/boards/paper/: board.cmake  paper.c  paper_config.h  paper_panel.c  paper_panel.h  paper_sd.c  paper_sim.c
bsp/boards/paper_s3/: board.cmake  paper_s3.c  paper_s3_panel.c  paper_s3_panel.h  paper_s3_sd.c  paper_s3_sim.c
bsp/boards/s31_korvo/: board.cmake  s31_adc_cali.c  s31_adc_cali.h  s31_korvo.c  s31_korvo_panel.c  s31_korvo_panel.h  s31_korvo_sim.c
bsp/boards/stickc_plus/: board.cmake  stickc_plus.c  stickc_plus_sim.c
bsp/boards/tab5/: board.cmake  tab5.c  tab5_audio.c  tab5_audio.h  tab5_panel.c  tab5_panel.h  tab5_sim.c
bsp/devices/aw88298/: aw88298.c  aw88298.h
bsp/devices/aw9523/: aw9523.c  aw9523.h
bsp/devices/axp192/: axp192.c  axp192.h  axp192_button.c
bsp/devices/axp2101/: axp2101.c  axp2101.h
bsp/devices/bm8563/: bm8563.c  bm8563.h
bsp/devices/ed047tc1/: ed047tc1.c  ed047tc1.h  ed047tc1_param.h
bsp/devices/es8388/: es8388.c  es8388.h
bsp/devices/ft6336u/: ft6336u.c  ft6336u.h
bsp/devices/gdey0154d67/: gdey0154d67.c  gdey0154d67.h  gdey0154d67_epd.c  gdey0154d67_epd.h
bsp/devices/gt1151/: gt1151.c  gt1151.h
bsp/devices/gt911/: gt911.c  gt911.h  gt911_hotknot.c  gt911_hotknot.h  gt911_hotknot_fw_blob.c  gt911_hotknot_fw_loader.c  gt911_internal.h
bsp/devices/ili9342c/: ili9342c.c  ili9342c.h
bsp/devices/ili9881c/: ili9881c.c  ili9881c.h  ili9881c_init_data.h
bsp/devices/ip5306/: ip5306.c  ip5306.h
bsp/devices/it8951e/: it8951e.c  it8951e.h  it8951e_epd.c  it8951e_epd.h
bsp/devices/pi4io/: pi4io.c  pi4io.h
bsp/devices/st7123/: st7123_init_data.h  st7123_lcd.c  st7123_lcd.h  st7123_touch.c  st7123_touch.h
bsp/devices/st7789v2/: st7789v2.c  st7789v2.h
bsp/devices/ws2812/: ws2812.c  ws2812.h
bsp/driver/: epd_blit_simd.h  epd_ll.c  epd_ll.h  epd_waveform.h
bsp/driver/adc_battery/: adc_battery.c  adc_battery.h
bsp/driver/adc_button/: adc_button.c  adc_button.h
bsp/driver/epd/: epd_ll.c  epd_ll.h  epd_ll_tweak.h  epd_waveform.h  epd_waveform_lut.h
bsp/driver/epd/test/: epd_waveform_test.c  (+1 more)
bsp/driver/gpio_button/: gpio_button.c  gpio_button.h
bsp/driver/i2s_dac/: i2s_dac.c  i2s_dac.h
bsp/driver/pwm_buzzer/: pwm_buzzer.c  pwm_buzzer.h
bsp/driver/pwm_led/: pwm_led.c  pwm_led.h
bsp/driver/rgb_lcd/: rgb_lcd.c  rgb_lcd.h
bsp/driver/sd_mmc/: sd_mmc.c  sd_mmc.h
bsp/driver/sd_spi/: sd_spi.c  sd_spi.h
bsp/driver/test/: epd_waveform_test.c  run.sh
bsp/inc/: audio_dsp.h  bsp.h  bsp_types.h
bsp/inc_private/: bsp_audio.h  bsp_button.h  bsp_dispatch.h  bsp_display.h  bsp_hotknot.h  bsp_input.h  bsp_led.h  bsp_power.h  bsp_rtc.h  bsp_sd.h  bsp_touch.h
bsp/simulator/: power_sim.c  power_sim.h  rtc_sim.c  rtc_sim.h  sd_redirect.c  sdl_audio.c  sdl_audio.h  sdl_panel.c  sdl_panel.h
bsp/src/: audio_dsp.c  bsp_audio.c  bsp_bus.c  bsp_button.c  bsp_dispatch.c  bsp_display.c  bsp_hotknot.c  bsp_input.c  bsp_led.c  bsp_power.c  bsp_rtc.c  bsp_sd.c  bsp_touch.c
bsp/test/: run.sh  test_audio_dsp.c  test_bsp_audio.c  test_sdl_audio.c
firmware/airq_hello/simulator/: CMakeLists.txt
firmware/epd_tweak/app/: CMakeLists.txt  ImageScreen.cpp  ImageScreen.hpp  SerialCmd.cpp  TestPatternScreen.cpp  TestPatternScreen.hpp  epd_tweak.cpp  epd_tweak.hpp
idf_compat/: CMakeLists.txt  README.md
idf_compat/include/: esp_check.h  esp_err.h  esp_heap_caps.h  esp_log.h  esp_timer.h  nvs.h  nvs_flash.h
idf_compat/include/driver/: i2c_master.h  jpeg_decode.h  ppa.h
idf_compat/include/freertos/: FreeRTOS.h  event_groups.h  portmacro.h  queue.h  semphr.h  task.h  timers.h
idf_compat/include/hal/: color_types.h  dma2d_types.h  ppa_types.h
idf_compat/include/simulator/: i2c_master_sim.h
idf_compat/src/: esp_err.c  esp_heap_caps.c  esp_timer.c  freertos_event_groups.c  freertos_internal.h  freertos_port.c  freertos_queue.c  freertos_task.c  freertos_timers.c  i2c_master.c  jpeg_decode.c  nvs.c  ppa.c
libs/image_framework/: CMakeLists.txt
libs/image_framework/inc/: imgf_alloc.h  imgf_async.h  imgf_decoder.h  imgf_dither.h  imgf_encoder.h  imgf_err.h  imgf_jpegd.h  imgf_jpege.h  imgf_pngd.h  imgf_raw_encoder.h  imgf_recolor.h  imgf_resize.h  imgf_sniff.h  imgf_stream.h  imgf_types.h
libs/image_framework/src/: imgf_alloc.c  imgf_alloc.h  imgf_async.c  imgf_breader.c  imgf_breader.h  imgf_decoder.c  imgf_decoder_internal.h  imgf_dither.c  imgf_encoder.c  imgf_encoder_internal.h  imgf_err.c  imgf_inflate.c  imgf_inflate.h  imgf_jpegd.c  imgf_jpege.c  imgf_jpege.h  imgf_pngd.c  imgf_raw_encoder.c  imgf_recolor.c  imgf_resize.c  imgf_sniff.c  imgf_stream.c
libs/image_framework/test/: gen_fixtures.py  gen_jpeg.c  image_framework_test.c  jpeg_fixtures.h  png_fixtures.h  run.sh
libs/jpeg_decode_enhanced/: CMakeLists.txt  README.md
libs/jpeg_decode_enhanced/include/: jpeg_decode_enhanced.h  jpeg_ppa_pipeline.h
libs/jpeg_decode_enhanced/src/: jpeg_decode_enhanced.c  jpeg_decode_enhanced_host.c  jpeg_ppa_pipeline.c
libs/sensors/: CMakeLists.txt
libs/sensors/common/: crc8.c  crc8.h  sensor_i2c.c  sensor_i2c.h
libs/sensors/sensirion/: sensirion_i2c.c  sensirion_i2c.h
libs/sensors/test/: run.sh  sensors_test.c
sim_harness/: CMakeLists.txt  sim_harness.c  sim_harness.h
ui_framework/: CMakeLists.txt  idf_component.yml
ui_framework/inc/: lvgl.hpp  screen.hpp  screen_manager.hpp  widgets.hpp
ui_framework/inc/widgets/: fonts.hpp  layout.hpp  modal.hpp  navigation.hpp
ui_framework/sim/: lv_conf.h
ui_framework/src/: lvgl.cpp  screen_manager.cpp
ui_framework/src/widgets/: fonts.cpp  modal.cpp  navigation.cpp
(+87 files in other folders)
